--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RUN BUDDY</title>
+  <title>Phillip Loy's Portfolio</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
